# mparam

./: CMakeLists.txt  README.md  component.yaml
build_example/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  libmparam.so.1  libmparam.so.1.0.0
build_example/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  mparam_tests
cmake/: mparamConfig.cmake.in
examples/: CMakeLists.txt  param_example.cpp
include/mparam/: mparam.h  param_client.h  param_server.h  param_store.h  param_traits.h  param_types.h
src/: param_client.cpp  param_server.cpp  param_store.cpp
test/: CMakeLists.txt  test_param.cpp
